--- a/three forms for quadratics.ipynb
+++ b/three forms for quadratics.ipynb
@@ -32,11 +32,11 @@
     }
    },
    "source": [
-    "$$\\begin{aligned}\n",
+    "\\begin{aligned}\n",
     "y&=x^2+bx+c && \\text{expanded form}\\\\\n",
     "&=(x+m)(x+n) && \\text{factorised form}\\\\\n",
     "&=(x+p)^2+q && \\text{completed the square}\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}"
    ]
   },
   {
@@ -49,10 +49,10 @@
    "source": [
     "### Factorised form\n",
     "\n",
-    "$$\\begin{array}{llll}\n",
+    "\\begin{array}{llll}\n",
     "(x+m)(x+n)&=x^2&+(m+n)x&+mn\\\\\n",
     "&=x^2&+bx&+c\n",
-    "\\end{array}$$\n",
+    "\\end{array}\n",
     "\n",
     "So $b=m+n$ and $c=mn$.\n",
     "\n",
@@ -69,10 +69,10 @@
    "source": [
     "### Completing the square\n",
     "\n",
-    "$$\\begin{array}{llll}\n",
+    "\\begin{array}{llll}\n",
     "(x+p)^2+q&=x^2&+2px&+p^2+q\\\\\n",
     "&=x^2&+bx&+c\n",
-    "\\end{array}$$\n",
+    "\\end{array}\n",
     "\n",
     "To match up the coefficients we'll just need to choose $p$ and $q$ so that\n",
     "$$\\begin{cases}\n",
