--- a/three forms for quadratics.ipynb
+++ b/three forms for quadratics.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "## The case when the coefficient of $x^2$ is $1$\n",
     "\n",
-    "We'll worry about the harder case later but for now"
+    "We'll worry about the harder case later, but for now"
    ]
   },
   {
