--- a/three forms for quadratics.ipynb
+++ b/three forms for quadratics.ipynb
@@ -718,9 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1144,6 +1143,7 @@
    "execution_count": 49,
    "metadata": {
     "hide_input": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1510,6 +1510,82 @@
     "axes.x.spine.position = 0\n",
     "axes.y.spine.position = 0\n",
     "axes.scatterplot([-2,0,4,10],[0,-20,-36,0],color=[\"blue\",\"red\",\"green\",\"blue\"],size=10);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "On the $y$-axis, $x=0$, so at the red point\n",
+    "\n",
+    "$$y=0^2-8\\cdot 0-20=-20$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "On the $x$-axis, $y=0$, so at the blue points\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "x^2-8x-20&=0\\\\\n",
+    "(x+2)(x-10)&=0\\\\\n",
+    "x&=-2\\text{ or }x=10\n",
+    "\\end{aligned}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The green point is the *minimum* of this function\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "y&=x^2-8x-20\\\\\n",
+    "&=(x-4)^2-36\n",
+    "\\end{aligned}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "But $(x-4)^2\\ge 0$ so $y\\ge -36$\n",
+    "\n",
+    "And $y=-36$ when $x=4$, so the minimum is at $(4,-36)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Task\n",
+    "\n",
+    "Find the $x$- and $y$-intercepts, and the coordinates of the minimum point of these graphs\n",
+    "\n",
+    "* $y=x^2+12x+20$\n",
+    "* $y=x^2+4x-5$\n",
+    "* $y=x^2+2x+6$"
    ]
   }
  ],
