add activities to motivate reasoning about graphs and roots

--- a/three forms for quadratics.ipynb
+++ b/three forms for quadratics.ipynb
@@ -1592,6 +1592,88 @@
     "\n",
     "Use that information to *sketch* each of these graphs."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Task\n",
+    "\n",
+    "What about when the *coefficient* of $x^2$ is not $1$?\n",
+    "\n",
+    "[Factorising using a grid](https://undergroundmathematics.org/quadratics/quadratic-grids)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Task\n",
+    "\n",
+    "[Quadratic sorter](https://undergroundmathematics.org/quadratics/quad-solving-sorter)\n",
+    "\n",
+    "When you're done, export the image and submit it to the classroom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Task\n",
+    "\n",
+    "[Name that graph](https://undergroundmathematics.org/quadratics/name-that-graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "### Extension Task\n",
+    "\n",
+    "[Parabella](https://undergroundmathematics.org/quadratics/parabella)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Task\n",
+    "\n",
+    "[Which parabola](https://undergroundmathematics.org/quadratics/which-parabola)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Discussion activity\n",
+    "\n",
+    "[Discriminating](https://undergroundmathematics.org/quadratics/discriminating)"
+   ]
   }
  ],
  "metadata": {
