--- a/random quadratics.ipynb
+++ b/random quadratics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
+   "outputs": [],
    "source": [
     "aa = [1,1,1,1,2,2,2,3,4,5,-1,-1,-2,-3,-4,-5]\n",
     "cc = [1,1,2,2,3,3,4,4,6,6,8,8,9,10,20,-1,-2,-3,-4,-6,-8,-9,-10,-20]\n",
@@ -32,12 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
+   "outputs": [],
    "source": [
     "def random_quadratic():\n",
     "    return np.random.choice(aa)*x**2+np.random.choice(bb)*x+np.random.choice(cc)"
@@ -45,12 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
    "source": [
     "y = random_quadratic()\n",
     "y"
@@ -58,12 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
+   "outputs": [],
    "source": [
     "sp.plot(y);"
    ]
