link to problem.pdf instead of problem page

--- a/random quadratics.ipynb
+++ b/random quadratics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -47,16 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAH4AAAAWCAYAAAAGhCi/AAAABHNCSVQICAgIfAhkiAAAAqVJREFU\naIHt2U2oDWEcx/GPlyxEyVssbKRQ3haWkrdSShasbIxYWNxkI1Hq7lh4TZINV7EgRUlhpVCKIgoL\nLzeLS91ysUDEtXjm5rjmnDNzZuYcNN+aOud5/s/z//3mmXnmf+ZQUdEBduMePqIfVzCvo4oq2sJ1\nbBYWez4u4S0mdlJURfsZh+9Y22kh/zsjOy1gGOMFTQNtzjsJW4Ud5zk+4wNuY4u/7zwl8U97uIAH\nGNXmvNswiD6cwz6cwvu4/SJGtFlTVv5ZD4cE0TM7kHuF8HgZfldMw2vhxK1vg44ozrWshbEd9XCj\nToIR6In79ieMO4w3mFOWsBzsEXQfS+hr1W89Iq0vfCMaeSiEhUJx9sTv2/XBOPHJhDFHhUp+blmi\ncrJT0H44oa8Vv42IlLPwjTwURk+cJIq/D11t5/25DR0XfsOvELakoWNcmQIzMBqPBf2r68T0SO+3\nGZHiFz6Nh0KYIVSUr9AVJ7yGMQmxg3WO7jIFZuCAoOdqg5gsfpsRKX7h03jQq/5iJB1n68yzrybm\nDsbmVV+SzkZsj8c+1fyFUit+e1Porj16MuqngYfRwwJf4EuGifvqtPfXfN6CTxnmTENROuvRJdQe\nT7AS75rEt+L3CCYMa1uEdTgjXBi1PEwxZy1ZPeRmI34IVfogTpSdsGB2CLofY2qK+CL9RorZ6rN6\nyM0afMUjTMEzfMPsdiQvgF3CCXuAySnii/Ybyb/wWT3kZomwxb3E9LhtQyzicjsE5GSvoPW+dH8S\nleE3km/hU3so6hXeItwUqtslwjN4iHtYjKW4VVC+otkkFE/fhZccHxJiev0qsMryG+E0lsfzZyGr\nh9zMEl7ADGBBQv8q4Sq8W1TCEujWvKq+GceW6TfS+h3fLb2HioqKioqKiv+Un06xEcoSnArEAAAA\nAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$- x^{2} - 2 x + 2$$"
+      ],
+      "text/plain": [
+       "   2          \n",
+       "- x  - 2⋅x + 2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y = random_quadratic()\n",
-    "y"
+    "y="
    ]
   },
   {
