clarify task structure

--- a/three forms for quadratics.ipynb
+++ b/three forms for quadratics.ipynb
@@ -26,7 +26,7 @@
     }
    },
    "source": [
-    "# Task 0\n",
+    "## Task 0\n",
     "\n",
     "[Factorisable quadratics](https://undergroundmathematics.org/quadratics/factorisable-quads/download/problem.pdf)"
    ]
@@ -65,8 +65,8 @@
    "source": [
     "$$\\begin{aligned}\n",
     "y&=x^2+bx+c && \\text{expanded form}\\\\\n",
-    "&=(x+m)(x+n) && \\text{factorised form}\\\\\n",
-    "&=(x+p)^2+q && \\text{completed the square}\n",
+    "&\\equiv(x+m)(x+n) && \\text{factorised form}\\\\\n",
+    "&\\equiv(x+p)^2+q && \\text{completed the square}\n",
     "\\end{aligned}$$"
    ]
   },
@@ -81,8 +81,8 @@
     "### Factorised form\n",
     "\n",
     "$$\\begin{array}{llll}\n",
-    "(x+m)(x+n)&=x^2&+(m+n)x&+mn\\\\\n",
-    "&=x^2&+bx&+c\n",
+    "(x+m)(x+n)&\\equiv x^2&+(m+n)x&+mn\\\\\n",
+    "&\\equiv x^2&+bx&+c\n",
     "\\end{array}$$\n",
     "\n",
     "So $b=m+n$ and $c=mn$.\n",
@@ -101,8 +101,8 @@
     "### Completing the square\n",
     "\n",
     "$$\\begin{array}{llll}\n",
-    "(x+p)^2+q&=x^2&+2px&+p^2+q\\\\\n",
-    "&=x^2&+bx&+c\n",
+    "(x+p)^2+q&\\equiv x^2&+2px&+p^2+q\\\\\n",
+    "&\\equiv x^2&+bx&+c\n",
     "\\end{array}$$\n",
     "\n",
     "To match up the coefficients we'll just need to choose $p$ and $q$ so that\n",
@@ -164,8 +164,8 @@
    "source": [
     "To complete the square we want \n",
     "$$\\begin{array}{llll}\n",
-    "(x+p)^2+q&=x^2&+2px&+p^2+q\\\\\n",
-    "&=x^2&-8x&+12\n",
+    "(x+p)^2+q&\\equiv x^2&+2px&+p^2+q\\\\\n",
+    "&\\equiv x^2&-8x&+12\n",
     "\\end{array}$$"
    ]
   },
@@ -232,8 +232,8 @@
     "To complete the square we want\n",
     "\n",
     "$$\\begin{array}{llll}\n",
-    "(x+p)^2+q&=x^2&+2px&+p^2+q\\\\\n",
-    "&=x^2&+10x&-200\n",
+    "(x+p)^2+q&\\equiv x^2&+2px&+p^2+q\\\\\n",
+    "&\\equiv x^2&+10x&-200\n",
     "\\end{array}$$\n",
     "\n",
     "So $2p=10\\implies p=5$\n",
@@ -251,7 +251,7 @@
     }
    },
    "source": [
-    "## Task\n",
+    "## Task 1\n",
     "Write these quadratics in factorised and completed-the-square form.\n",
     "\n",
     "* $y=x^2+12x+20$\n",
@@ -341,7 +341,7 @@
     }
    },
    "source": [
-    "### Task\n",
+    "## Task 2\n",
     "\n",
     "Go back and add a few more $x$-values. Don't forget to run that cell. Run the plotting cell. See if you can get a better view of the function."
    ]
@@ -358,6 +358,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Task 3\n",
+    "\n",
+    "`numpy` has a [`linspace` function](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html). Read the documentation. What does `linspace` do?\n",
+    "\n",
+    "Let's see it in action."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -368,17 +383,6 @@
    "outputs": [],
    "source": [
     "import numpy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "`numpy` has a [`linspace` function](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html). Read the documentation. What does `linspace` do?"
    ]
   },
   {
@@ -463,14 +467,16 @@
     }
    },
    "source": [
-    "Find the coordinates of these points on $$y=x^2-8x-20$$"
+    "Run the following cell to sketch the graph of $$y=x^2-8x-20$$\n",
+    "\n",
+    "Find the coordinates of the coloured points."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true,
+    "hide_input": false,
     "scrolled": false,
     "slideshow": {
      "slide_type": "-"
@@ -529,7 +535,9 @@
     "$$\\begin{aligned}\n",
     "y&=x^2-8x-20\\\\\n",
     "&=(x-4)^2-36\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}$$\n",
+    "\n",
+    "You might remember how to find the *vertex* from GCSE, but why does that work?"
    ]
   },
   {
@@ -540,7 +548,7 @@
     }
    },
    "source": [
-    "But $(x-4)^2\\ge 0$ so $y\\ge -36$\n",
+    "$(x-4)^2\\ge 0$ so $y\\ge -36$\n",
     "\n",
     "And $y=-36$ when $x=4$, so the minimum is at $(4,-36)$"
    ]
@@ -553,7 +561,7 @@
     }
    },
    "source": [
-    "### Task\n",
+    "## Task 4\n",
     "\n",
     "Find the $x$- and $y$-intercepts, and the coordinates of the minimum point of these graphs\n",
     "\n",
@@ -573,7 +581,7 @@
     }
    },
    "source": [
-    "### Task\n",
+    "## Task 5\n",
     "\n",
     "What about when the *coefficient* of $x^2$ is not $1$?\n",
     "\n",
@@ -588,7 +596,7 @@
     }
    },
    "source": [
-    "### Task\n",
+    "## Task 6\n",
     "\n",
     "[Quadratic sorter](https://undergroundmathematics.org/quadratics/quad-solving-sorter/download/problem.pdf)\n",
     "\n",
@@ -603,7 +611,7 @@
     }
    },
    "source": [
-    "### Task\n",
+    "## Task 7\n",
     "\n",
     "[Name that graph](https://undergroundmathematics.org/quadratics/name-that-graph/download/problem.pdf)"
    ]
@@ -616,7 +624,7 @@
     }
    },
    "source": [
-    "### Extension Task\n",
+    "## Extension Task\n",
     "\n",
     "[Parabella](https://undergroundmathematics.org/quadratics/parabella/download/problem.pdf)"
    ]
@@ -629,7 +637,7 @@
     }
    },
    "source": [
-    "### Task\n",
+    "## Task 8\n",
     "\n",
     "[Which parabola](https://undergroundmathematics.org/quadratics/which-parabola/download/problem.pdf)"
    ]
@@ -642,7 +650,7 @@
     }
    },
    "source": [
-    "### Discussion activity\n",
+    "## Discussion activity\n",
     "\n",
     "[Discriminating](https://undergroundmathematics.org/quadratics/discriminating/download/problem.pdf)"
    ]
