--- a/three forms for quadratics.ipynb
+++ b/three forms for quadratics.ipynb
@@ -476,7 +476,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false,
+    "hide_input": true,
     "scrolled": false,
     "slideshow": {
      "slide_type": "-"
