--- a/inequalities.ipynb
+++ b/inequalities.ipynb
@@ -51,9 +51,7 @@
     }
    },
    "source": [
-    "### Question\n",
-    "\n",
-    "Now, by hand\n",
+    "### Example\n",
     "\n",
     "$\\texttt{(a) }8\\left(x-4\\right)-7\\gt x-11$\n",
     "\n",
@@ -137,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   },
   "nbpresent": {
    "slides": {
