--- a/sketching.ipynb
+++ b/sketching.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "hide_input": true,
+    "hide_input": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -544,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
